syntax = "proto3";

option csharp_namespace = "MCB.Demos.Orders.Microservices.Products.Ports.GRPCService.Protos.GetProducts";

package products;

service Products {
	rpc GetProducts (GetProductsRequest) returns (GetProductsReply);
}

message GetProductsRequest {}

message GetProductsReply {
	repeated Product productArray  = 1;
}

message Product {
	string code = 1;
	string name = 2;
}